--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,12 @@
             <artifactId>tomcat-jasper</artifactId>
             <version>9.0.62</version>
         </dependency>
-
+        <!-- validate-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.4.5</version>
+        </dependency>
 
     </dependencies>
 
